[tool.poetry]
name = "datamon-backup"
version = "0.1.0"
description = ""
authors = ["Michael Kang <mkang@oneconcern.com>"]
readme = "README.md"
packages = [{include = "datamon_backup"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
